--- a/src/main/webapp/WEB-INF/views/people/edit-person.html
+++ b/src/main/webapp/WEB-INF/views/people/edit-person.html
@@ -5,13 +5,15 @@
     <title>Страница изменения пользователя</title>
 </head>
 <body>
-<form th:method="PATCH" th:action="@{/people/{id}(id=${person.get().getId()})}" th:object="${person}">
+<form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="full-name">Введите ФИО: </label>
     <input type="text" th:field="*{fullName}" id="full-name">
+    <div style="color: red" th:if="${#fields.hasErrors('fullName')}"  th:errors="*{fullName}">Full name error</div>
     <br>
     <br>
-    <label for="year">Введите год рождения: </label>
-    <input type="text" th:field="*{yearOfBirth}" id="year">
+    <label for="yearOfBirth">Введите год рождения: </label>
+    <input type="text" th:field="*{yearOfBirth}" id="yearOfBirth">
+    <div style="color: red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">Year error</div>
     <br>
     <br>
     <input type="submit" value="Обновить пользователя">
