--- a/src/main/webapp/WEB-INF/views/people/new-person.html
+++ b/src/main/webapp/WEB-INF/views/people/new-person.html
@@ -8,10 +8,12 @@
 <form th:method="POST" th:action="@{/people}" th:object="${person}">
     <label for="full-name">Введите ФИО: </label>
     <input type="text" th:field="*{fullName}" id="full-name">
+    <div style="color: red" th:if="${#fields.hasErrors('fullName')}"  th:errors="*{fullName}">Full name error</div>
     <br>
     <br>
     <label for="year">Введите год рождения: </label>
     <input type="text" th:field="*{yearOfBirth}" id="year">
+    <div style="color: red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}"></div>
     <br>
     <br>
     <input type="submit" value="Сохранить пользователя">
