--- a/src/main/webapp/WEB-INF/views/books/edit-book.html
+++ b/src/main/webapp/WEB-INF/views/books/edit-book.html
@@ -5,17 +5,20 @@
     <title>Страница изменения книги</title>
 </head>
 <body>
-<form th:method="PATCH" th:action="@{/books/{id}(id=${book.get().getId()})}" th:object="${book}">
+<form th:method="PATCH" th:action="@{/books/{id}(id=${book.getId()})}" th:object="${book}">
     <label for="title">Введите название книги: </label>
     <input type="text" th:field="*{title}" id="title">
+    <div style="color: red" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Title error</div>
     <br>
     <br>
     <label for="author">Введите автора: </label>
     <input type="text" th:field="*{author}" id="author">
+    <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}">Author error</div>
     <br>
     <br>
     <label for="year">Введите год: </label>
     <input type="text" th:field="*{year}" id="year">
+    <div style="color: red" th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Year error</div>
     <br>
     <br>
     <input type="submit" value="Редактировать">
