--- a/src/main/webapp/WEB-INF/views/books/new-book.html
+++ b/src/main/webapp/WEB-INF/views/books/new-book.html
@@ -22,6 +22,8 @@
     <br>
     <br>
     <input type="submit" value="Сохранить книгу">
+    <br>
+    <a href="/books">На главное меню</a>
 </form>
 </body>
 </html>
