--- a/src/main/webapp/WEB-INF/views/people/edit-person.html
+++ b/src/main/webapp/WEB-INF/views/people/edit-person.html
@@ -8,7 +8,7 @@
 <form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="full-name">Введите ФИО: </label>
     <input type="text" th:field="*{fullName}" id="full-name">
-    <div style="color: red" th:if="${#fields.hasErrors('fullName')}"  th:errors="*{fullName}">Full name error</div>
+    <div style="color: red" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}">Full name error</div>
     <br>
     <br>
     <label for="yearOfBirth">Введите год рождения: </label>
@@ -17,6 +17,8 @@
     <br>
     <br>
     <input type="submit" value="Обновить пользователя">
+    <br>
+    <a href="/people">На главное меню</a>
 </form>
 </body>
 </html>
